--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
+    id 'org.springframework.boot' version '2.2.0.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
-    id 'war'
 }
 
 group 'ru.moa'
@@ -19,40 +20,24 @@ compileTestJava {
     options.encoding = defaultEncoding
 }
 
-war {
-    archiveName "playerEvents.war"
-    doFirst {
-        manifest {
-            attributes(
-                    "Implementation-Title": "player-events",
-                    "Implementation-Version": "${project.version}",
-            )
-        }
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
     }
 }
 
-
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    // springframework
-    compile group: 'org.springframework', name: 'spring-web', version: '5.2.3.RELEASE'
-    compile group: 'org.springframework', name: 'spring-webmvc', version: '5.2.3.RELEASE'
-    compile group: 'org.springframework', name: 'spring-core', version: '5.2.3.RELEASE'
-    compile group: 'org.springframework', name: 'spring-context', version: '5.2.3.RELEASE'
-    compile group: 'org.springframework', name : 'spring-jdbc', version: '5.1.8.RELEASE'
-    compile group: 'org.springframework', name : 'spring-tx', version: '5.1.8.RELEASE'
-    compile group: 'org.springframework.data', name : 'spring-data-jpa', version: '2.1.9.RELEASE'
-
-    // logs
-    compile group: 'org.slf4j', name:'slf4j-api', version: '2.0.0-alpha0'
-    compile group: 'org.slf4j', name:'log4j-over-slf4j', version: '2.0.0-alpha0'
-    compile group: 'org.slf4j', name:'jcl-over-slf4j', version: '2.0.0-alpha0'
-    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.3.0-alpha5'
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha5'
-
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
     // mySQL
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
@@ -74,18 +59,6 @@ dependencies {
     //ModelMapper
     compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
 
-    //Jackson
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.1'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.1'
-    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.10.1'
-
-
-    // lombok
-    providedCompile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
-    annotationProcessor 'org.projectlombok:lombok:1.18.12'
-
-    //Servlet
-    providedCompile group: 'javax.servlet', name: 'servlet-api', version: '2.3'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
