--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,17 @@ logging.level.org.hibernate.type=trace
 spring.h2.console.enabled=true
 
 spring.liquibase.change-log=classpath:db-change-log.xml
+
+
+mail.smtp.host=smtp.rambler.ru
+mail.smtp.socketFactory.exists=true
+mail.smtp.socketFactory.port=465
+mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+mail.smtp.auth=true
+mail.smtp.port=465
+mail.smtp.userName=sodch-test
+mail.smtp.password=qwerty
+mail.from=sodch-test@rambler.ru
+mail.encoding=UTF-8
+mail.test=true
+mail.test.to=sodch-test@rambler.ru
