--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.type=trace
+logging.level.org.hibernate.sql=trace
+logging.level.org.springframework.transaction=trace
 
 spring.h2.console.enabled=true
 
